// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeckDetail renderItem renders properly 1`] = `
<Flashcard>
  <withTheme(TextInput)
    editable={false}
    label="Question"
    mode="outlined"
    multiline={true}
    value="What is React?"
  />
  <withTheme(TextInput)
    editable={false}
    label="Answer"
    mode="outlined"
    multiline={true}
    value="A library for managing user interfaces"
  />
</Flashcard>
`;

exports[`DeckDetail renders properly when deck does not have questions 1`] = `
<Styled(Component)>
  <KeyboardAvoidingView
    behavior="padding"
    enabled={true}
    keyboardVerticalOffset={94}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <NoContent
      onEditButtonPress={[Function]}
    />
  </KeyboardAvoidingView>
</Styled(Component)>
`;

exports[`DeckDetail renders properly when deck has questions 1`] = `
<Styled(Component)>
  <KeyboardAvoidingView
    behavior="padding"
    enabled={true}
    keyboardVerticalOffset={94}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <FlatList
      data={
        Array [
          Object {
            "answer": "A library for managing user interfaces",
            "question": "What is React?",
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </KeyboardAvoidingView>
</Styled(Component)>
`;
